# pytheum

./: .gitattributes  .gitignore  .importlinter  CHANGELOG.md  README.md  openapi.yaml  pyproject.toml  server.json
.github/workflows/: ci.yml  release.yml
datasets/: MANIFEST.json  README.md  equivalence-export.jsonl.gz.sha256  pm-events-export.jsonl.gz.sha256  related-export.jsonl.gz.sha256  relations-export.jsonl.gz.sha256
deploy/: com.pytheum.warmup-ping.plist
docs/: 2026-06-13-trader-endpoint-diagnosis.md  kalshi-oi-still-null-2026-06-13.md  trader-analytics-failures-2026-06-13.md
docs/bench/: 2026-07-03-endpoint-latency.md  2026-07-03-mcp-latency.md  2026-07-03-stress-ramp.md
docs/mcp/: README.md  compliance.md  server.json  tools.md
docs/specs/: 2026-07-03-python-sdk-design.md
npm/: .gitignore  LICENSE  README.md  package.json
npm/test/: smoke.test.js
scripts/: audit_db_grants.py  bench_endpoints.py  bench_mcp.py  ensure_search_indexes.py  gen_checksums.py  gen_openapi.py  load_market_equivalence.py  map_pair_sides.py  refresh_equivalence.sh  resolve_polymarket_slugs.py  stress_ramp.py  sweep_settled_markets.py  sync_full_catalog.py  sync_paired_kalshi.py  sync_paired_polymarket.py  verify_checksums.py  warmup_ping.py
src/pytheum/: __init__.py  cli.py  config.py  llms_txt.py  registry.py  routing.py
src/pytheum/api/: __init__.py  _bounded_cache.py  annotators.py  gate.py  markets_book.py  markets_equivalents.py  markets_get.py  markets_holders.py  markets_matched.py  markets_mm.py  markets_ohlcv.py  markets_oi.py  markets_related.py  markets_rules.py  markets_screen.py  markets_search.py  markets_trades.py  markets_whale_trades.py  meta.py  metrics.py  params.py  quality.py  ref_utils.py  status.py  traders_leaderboard.py  traders_profile.py
src/pytheum/auth/: __init__.py  rate_limit.py  tokens.py
src/pytheum/client/: README.md  __init__.py  _registry.py  _transport.py  client.py  errors.py  models.py
src/pytheum/datasets/: MANIFEST.json  __init__.py
tests/: conftest.py  test_annotators_cov.py  test_api_gate.py  test_api_residual_branches_cov.py  test_api_small_modules_cov.py  test_asgi_app.py  test_audit_db_grants.py  test_auth_rate_limit_cov.py  test_auth_tokens_cov.py  test_bounded_cache.py  test_cli_cov.py  test_config_env_roundtrip.py  test_dataset_copies_in_sync.py  test_dataset_scripts.py  test_default_paths_cov.py  test_divergences_depth_overlay.py  test_divergences_orientation.py  test_divergences_resolution_mismatch.py  test_divergences_rules.py  test_divergences_stale_reprice.py  test_divergences_warnings.py  test_ensure_search_indexes.py  test_equivalence_fungibility.py  test_equivalence_index_cov.py  test_equivalents_bet_type_filter.py  test_equivalents_overfetch.py  test_equivalents_status_filter.py  test_fees.py  test_fungible_filter.py  test_hl_related_index.py  test_map_pair_sides_totals.py  test_markets_equivalents.py  test_markets_equivalents_cov.py  test_markets_get.py  test_markets_matched.py  test_markets_matched_cache.py  test_markets_mm.py  test_markets_ohlcv_cov.py  test_markets_related.py  test_markets_rules.py  (+45 more)
tests/client/: stress_sdk.py  test_completeness.py  test_governor_backoff.py  test_live.py  test_models.py  test_transport.py
(+30 files in other folders)
