[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytheum"
version = "0.0.1"
description = "The verified prediction-market graph — routing, registry, config, and dataset tooling"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Pytheum", email = "kwnstantinosanagn@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "build",
    "import-linter>=2.1",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["src/pytheum"]
omit = ["*/tests/*"]

[tool.mypy]
strict = true
python_version = "3.11"
mypy_path = "src"
packages = ["pytheum"]

[tool.ruff]
src = ["src"]
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["SIM105"]  # contextlib.suppress — handled per-file where needed
