[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytheum"
version = "0.1.0"
description = "The verified prediction-market graph — routing, registry, config, and dataset tooling"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Pytheum", email = "team@pytheum.com" }]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "mcp>=1.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "build",
    "import-linter>=2.1",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.scripts]
pytheum = "pytheum.cli:main"
pytheum-mcp = "pytheum.mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pytheum.datasets" = ["MANIFEST.json"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["src/pytheum"]
omit = ["*/tests/*"]

[tool.mypy]
strict = true
python_version = "3.11"
mypy_path = "src"
packages = ["pytheum"]

[[tool.mypy.overrides]]
# pytheum_core is an optional runtime dep (not installed in this public repo).
# All imports from it are inside TYPE_CHECKING guards or deferred function bodies.
module = "pytheum_core.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# MCP server + tools: HTTP-client code with intentionally broad Any usage.
# Strict annotations would require full stubs for the MCP SDK + all venue APIs;
# we suppress the whole module rather than adding 50+ ignores across thin wrappers.
module = ["pytheum.mcp.server", "pytheum.mcp.tools"]
ignore_errors = true

[tool.ruff]
src = ["src"]
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "SIM105"]  # E501: MCP tool docstrings are intentionally long; SIM105: contextlib.suppress
